2010-04-16  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Fix indention on insert environment features.
 * Make wizard run on hitting enter when inserting some of the values.


2010-04-14  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Ensure basic indent is getting applied on closing command of
   autocompletion of \begin{} and \begingroup{} feature.


2010-04-11  Frank Lanitz  <frank@frank.uvena.de>

 * Enabling inserting label on pushing return after typing in label name.
 * Enabling inserting \usepackage{} on pushing return after typing in dialog.
 * Enabling inserting environment on pushing return after typing inside
   the insert environment dialog.
 * Enabling inserting reference on pushing return after typing inside the
   insert reference dialog.


2010-03-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Add a menu entry for inserting font sizes to document


2010-03-20  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Insert a keybinding and a dialog to insert a \usepackage{} line to header.
   Still experimental.


2010-03-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Add a very first attempt to support landscape on wizard. Output is
   far away from being good.


2010-01-27  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Add an example spec file for creating rpm files.
   Thanks to Krzysztof Goliński and Dominic Hopf for efforts here.


2010-01-16  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * Took over functionality to automatic close \begin{} and \begingroup{}
   from Geany core


2009-01-03  Frank Lanitz  <frank@frank.uvena.de>

 * Don't deactivate wizard icon if no document is open


2009-01-01  Frank Lanitz  <frank@frank.uvena.de>

 * Make text used for inserting references configurable.
   Please check documentation for details on how to do it.


2009-12-26  Frank Lanitz  <frank@frank.uvena.de>

 * Deactivate icons of toolbar, if no LaTeX document is open. Behavior
   can be deactivated via hidden pref.

